[bean] record